Fix about page wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -586,7 +586,10 @@ input:placeholder-shown {
 .about
 {
 	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	gap: 0.5em;
+	text-align: center;
 }
 
 .about .links
